# AiStaff

./: .env.example  .env.production.template  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  deny.toml  docker-compose.dokploy.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.cargo/: audit.toml  config.toml
.claude/: launch.json  settings.local.json
.sqlx/: query-02381d78814bd57d7e6056fa902475a3fef828b417e68763e7eb2994f83733b6.json  query-0891cc0e32964a9656d0b6efaaace763373b7b95d882e2e1157e79e4abb8b7f3.json  query-096b6624d93757e807dbc515600210d6f552034f575f60f215a297d83f67f6bc.json  query-1740f32f58853747e64a2b7ea18257e4bb3bc81f91139be7e679fb42e74b96bd.json  query-19837030b9e66a615b40a1aafa6254ce6192b007a2b10b318311c71b1e715ecd.json  query-1a34db988deb8b631f8a8fa17d8d4426114e269d970390742dbb565c8c7ca47d.json  query-1ca1f14f14afc02d3e80114feaab4d12ddfc186480c21b46eda75782f28dca1d.json  query-1caf8f29775c4a42b2491523361a31f067423087eddb54fb0cca52d972867c52.json  query-20473fa91a55712f019c900961a9ae13f895d95d593e55d3a76932a70a242750.json  query-21444ecc748b86763dbaf4af0f06e37fe43cbf30d4173ce3fe8379f586ea2e26.json  query-224747f1ebea454344513f5faee8f8f82899f5ad015f3589c5e8c7f01d0ebcfa.json  query-28e1dd28515509c0f7c93e1d5d21a18ac05b3df0e7e44e3a766442c81ff0c167.json  query-2cc43e424be751d077288042204cf5a05ea216b050a5740a22b6454a3215362e.json  query-2dc842fe5e72972b3be25c8cca27077933bf43f3e919d1bb0cc8fce727b55aa3.json  query-300bace3d3fd63dceae90efe7d958e2c4f2872cbf591772eeb789f5431a4e2d1.json  query-3170492df9bba454f9bd978bcb5db62acd3c4af327adc14d71d144bc2addb157.json  query-32f628461a0b93f171dafcb4ad59cbe3906912e869c5ffd38f3aad4c7c763cf3.json  query-3339835a5027aec746abd67a72b01105494eab86310e695a42abd51b0af65486.json  query-3a09a24ed52d525382417962cbf2ad1e26aa95399c87466e514a90ecfaa57642.json  query-3dc71157ffd113077c9a201b2fec3e23adddceb5945cac56e7b8adf2591b163c.json  query-4784e601279a90f9abfd4ed705f516b3091054e58b588a11945a051659d42348.json  query-4c92d53905ca71138cb9f0b178ecbeb4bc28357dea63384262ff2a8050070f80.json  query-4d96c94d97c0cd10fb46fd2fa7d8d9029569131ada7ee5a545a6b15567a4da97.json  query-4f7cf73f393be53ced021249df0dc58fd1045a3c4cdfb29f632a8d2546908070.json  query-5790610e94bce1e406f9be700b4c0efc30144f94a16d385233cfb115086e4df0.json  query-57f679f038537e8d57cf635655071f13803a8b8fdd88c8cd4acd83e040af1a50.json  query-583ea0a01321e78b14bbb824c829455c4b6c096d90babbb26ff968de8249721d.json  query-5a15d15ab65dfba697ec17eb4624c3f0a057d0c8cb177293e6a1740c7eead960.json  query-5cde9295b738347827485ce36efc7cdea2e3abbdbb8bfd1098178bcbdfd30c3b.json  query-5e8643b6a7b44e622b408b9584e420254a118aa6644337b6ca1634dcf81d999e.json  query-5eae03ad9c8c5d429e866193ccc44c15762ed4516b144cf4a7c72882df1d8671.json  query-5fe05c68f2278437ecbfa5ee6b3020d9747efde6f884b5068fb42486f7cfff3b.json  query-64de64f62a5e01d5996f54dca574613064acacf93b55d36e92f12661ce77a9bc.json  query-682667c86c2fb948d3d1b89c2e2c2d131ed3b3338d6bad4f947289e080188909.json  query-6f9a778a16cccf99d001f382900b9f195260fc40df4df21eefe9c855bde051cf.json  query-7137bba4dd5de9593c7c7a04bb9fa4958f0d56ce15dd964e8586d9951672a47d.json  query-743fad265bd02a6fb89962000cc10c9beb871d6f15950064d9090cee2d4ba052.json  query-744f413bef8a80f4ae827642463f7f61f57cb94abbfbe3524aca4d15e2286015.json  query-76928e0e13df1399538a466ad1fc6a7be554aa636cb71a4dd11a9e43770e272f.json  query-78d7296a333368ad40cc16cb93e7a1adcdd51d80baa078d83de1402cc97c8e1e.json  (+52 more)
crates/common/: Cargo.toml
crates/common/src/: errors.rs  events.rs  lib.rs
crates/common/src/kafka/: consumer.rs  producer.rs
crates/common/src/types/: identity.rs
crates/community_service/: Cargo.toml
crates/community_service/src/: carbon.rs  career.rs  handlers.rs  hub_service.rs  lib.rs  main.rs  mentorship.rs  wellbeing.rs
crates/community_service/tests/: integration_career.rs  integration_hubs.rs  integration_wellbeing.rs
crates/community_service/tests/common/: mod.rs
crates/deployment_engine/: Cargo.toml
crates/deployment_engine/src/: checklist_consumer.rs  main.rs  mcp_proxy.rs  pm_consumer.rs  sandbox.rs  success_trigger.rs
crates/environment_orchestrator/: Cargo.toml
crates/environment_orchestrator/src/: checks.rs  consumer.rs  main.rs
crates/license_service/: Cargo.toml
crates/license_service/src/: handlers.rs  issuer.rs  main.rs  validator.rs
crates/marketplace_service/: Cargo.toml
crates/marketplace_service/src/: admin_handlers.rs  bundle_handlers.rs  change_request_handlers.rs  collab_handlers.rs  enterprise_handlers.rs  escrow_consumer.rs  handlers.rs  integration_handlers.rs  lib.rs  listing_media_handlers.rs  main.rs  pm_consumer.rs  proposal_handlers.rs  quality_gate_handlers.rs
crates/marketplace_service/tests/: integration_agency_escrow.rs
crates/marketplace_service/tests/common/: mod.rs
crates/matching_service/: Cargo.toml
crates/matching_service/src/: handlers.rs  main.rs  matcher.rs  orchestrator.rs
crates/mcp_server/: Cargo.toml
crates/mcp_server/src/: main.rs
crates/mcp_server/src/tools/: db.rs  fs.rs
crates/notification_service/: Cargo.toml
crates/notification_service/src/: consumer.rs  fanout.rs  handlers.rs  integrations.rs  main.rs  prefs.rs
crates/payout_service/: Cargo.toml
crates/payout_service/src/: handlers.rs  main.rs  veto_payout.rs
crates/telemetry_service/: Cargo.toml
crates/telemetry_service/src/: consumer.rs  drift_detector.rs  handlers.rs  main.rs
docs/: api-spec.md  architecture.md  data-processing-register.md  incident-response.md  secret-registry.md  security-audit.md
migrations/: 0001_create_unified_profiles.sql  0002_create_listings.sql  0003_create_deployments.sql  0004_create_escrow_and_audit.sql  0005_create_licenses.sql  0006_create_dod_checklists.sql  0007_create_warranty_claims.sql  0008_create_skill_graph.sql  0009_create_match_requests.sql  0010_create_notifications.sql  0011_create_compliance.sql  0012_create_telemetry.sql  0013_create_reputation_vcs.sql  0014_create_community_growth.sql  0015_multi_channel_notifications.sql  0017_profile_fields.sql  (+58 more)
(+456 files in other folders)
