[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/identity_service",
    "crates/marketplace_service",
    "crates/deployment_engine",
    "crates/payout_service",
    "crates/mcp_server",
    # v2 — Managed Digital Workforce
    "crates/license_service",
    "crates/checklist_service",
    "crates/environment_orchestrator",
    "crates/matching_service",
    "crates/notification_service",
    "crates/compliance_service",
    "crates/telemetry_service",
    "crates/analytics_service",
    "crates/reputation_service",
    # Feature 08 — Community & Growth
    "crates/community_service",
]

[workspace.package]
version  = "0.1.0"
edition  = "2021"
authors  = ["AiStaffApp Team"]
license  = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web
axum       = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }

# Database
sqlx = { version = "0.8", features = [
    "postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"
] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow    = "1"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Wasmtime
wasmtime = { version = "42", features = ["async", "cranelift"] }

# Identity / OAuth
oauth2 = "4"

# ZK proofs
ark-groth16   = { version = "0.4", default-features = false, features = ["r1cs"] }
ark-bn254     = { version = "0.4", default-features = false, features = ["curve"] }
ark-serialize = "0.4"
blake3        = "1.5"

# Utilities
uuid        = { version = "1", features = ["v4", "v7", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
sha2        = "0.10"
hex         = "0.4"
base64      = "0.22"
urlencoding = "2.1"
dotenvy     = "0.15"
reqwest     = { version = "0.12", features = ["json"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Email
lettre = { version = "0.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "hostname"] }

# System info (environment_orchestrator pre-flight checks)
sys-info = "0.9"

# Internal
common = { path = "crates/common" }

[profile.release]
lto           = true      # Link-time optimisation — merges all codegen units
codegen-units = 1         # Single unit: slower build, faster + smaller binary
strip         = "symbols" # Strip debug symbols from final binary
opt-level     = "z"       # Optimise for binary size (best cold-start on edge)
