[package]
name    = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
uuid.workspace       = true
chrono.workspace     = true
rdkafka.workspace    = true
tracing.workspace    = true
tokio.workspace      = true
sha2.workspace       = true
hex.workspace        = true
anyhow.workspace     = true
sqlx.workspace       = true
