[package]
name    = "deployment_engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "deployment_engine"
path = "src/main.rs"

[dependencies]
common.workspace       = true
tokio.workspace        = true
axum.workspace         = true
tower-http.workspace   = true
sqlx.workspace         = true
serde.workspace        = true
serde_json.workspace   = true
thiserror.workspace    = true
anyhow.workspace       = true
uuid.workspace         = true
chrono.workspace       = true
sha2.workspace         = true
hex.workspace          = true
wasmtime.workspace     = true
rdkafka.workspace      = true
tracing.workspace      = true
tracing-subscriber.workspace = true
dotenvy.workspace      = true
reqwest.workspace      = true
