[package]
name    = "environment-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
common       = { workspace = true }
tokio        = { workspace = true }
sqlx         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
sys-info     = { workspace = true }
dotenvy      = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
