[package]
name = "license_service"
version.workspace = true
edition.workspace = true

[dependencies]
common       = { workspace = true }
axum         = { workspace = true }
tokio        = { workspace = true }
sqlx         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
dotenvy      = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http   = { workspace = true }
