[package]
name    = "marketplace_service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "marketplace_service"
path = "src/lib.rs"

[[bin]]
name = "marketplace_service"
path = "src/main.rs"

[dependencies]
common.workspace       = true
tokio.workspace        = true
axum.workspace         = true
tower-http.workspace   = true
sqlx.workspace         = true
serde.workspace        = true
serde_json.workspace   = true
thiserror.workspace    = true
anyhow.workspace       = true
uuid.workspace         = true
chrono.workspace       = true
rdkafka.workspace      = true
tracing.workspace      = true
tracing-subscriber.workspace = true
dotenvy.workspace      = true
reqwest.workspace      = true
infer.workspace        = true

[dev-dependencies]
testcontainers          = "0.23"
testcontainers-modules  = { version = "0.11", features = ["postgres"] }
