[package]
name    = "notification-service"
version.workspace = true
edition.workspace = true

[dependencies]
common             = { workspace = true }
tokio              = { workspace = true }
sqlx               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
lettre             = { workspace = true }
dotenvy            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
reqwest            = { workspace = true }
base64             = { workspace = true }
oauth2             = { workspace = true }
aes-gcm            = "0.10"
urlencoding        = { workspace = true }
