[package]
name    = "payout_service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "payout_service"
path = "src/main.rs"

[dependencies]
common.workspace       = true
tokio.workspace        = true
sqlx.workspace         = true
serde.workspace        = true
serde_json.workspace   = true
thiserror.workspace    = true
anyhow.workspace       = true
uuid.workspace         = true
chrono.workspace       = true
rdkafka.workspace      = true
hex.workspace          = true
axum.workspace         = true
tower-http.workspace   = true
tracing.workspace      = true
tracing-subscriber.workspace = true
dotenvy.workspace      = true
